[package]
name = "ecspend"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8", features = ["macros"] }
rusoto_core = "0.41"
rusoto_ecs = "0.41"
structopt = "0.3"
tabwriter = "1.1"